--- a/views/movies.hbs
+++ b/views/movies.hbs
@@ -4,7 +4,12 @@
        <h1>{{title}}</h1>
        <img src="{{image}}" />
        <a href="movies/{{_id}}">
+       
         See more
        </a>
+        <br />
+       <a href="movies/{{_id}}/update"> Update Movie</a>
+        <br />
+        <a href="movies/{{_id}}/delete">Delete Movie</a>
     {{/each}}
 </div>
